--- a/pasajeros.html
+++ b/pasajeros.html
@@ -1,315 +1,226 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-    <title>Pasajeros</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Registro de Pasajeros</title>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
-    <style>
-      body {
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        background-color: #cfa9d6;
-        margin: 0;
-        padding: 20px;
-      }
+  <style>
+    body {
+      background-color: #cfa9d6;
+      padding: 20px;
+    }
 
-      .contenedor {
-        background-color: #ffffff;
-        padding: 30px 40px;
-        border-radius: 12px;
-        box-shadow: 0 8px 20px rgba(0,0,0,0.1);
-        max-width: 960px;
-        margin: auto;
-      }
+    .contenedor {
+      background-color: #ffffff;
+      padding: 30px 40px;
+      border-radius: 12px;
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+      max-width: 960px;
+      margin: auto;
+    }
 
-      h1 {
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        text-align: center;
-        color: #000000;
-        margin-bottom: 30px;
-      }
+    .acciones button {
+      background: none;
+      border: none;
+      cursor: pointer;
+      font-size: 18px;
+      padding: 5px;
+      margin: 0 4px;
+      color: #50d144;
+    }
 
-      label {
-        display: block;
-        margin-top: 15px;
-        font-weight: 600;
-        color: #000000;
-      }
+    .acciones button:hover {
+      color: #87b6df;
+      transform: scale(1.2);
+    }
 
-      input[type="text"],
-        input[type="email"],
-        input[type="datetime-local"] {
-          width: 100%;
-          padding: 10px 12px;
-          margin-top: 6px;
-          border: 1px solid #201c1c;
-          border-radius: 6px;
-          box-sizing: border-box;
-          transition: border 0.3s;
-      } 
+    .btn-purple {
+      background-color: #66095e;
+      color: white;
+    }
 
-      input[type="text"]:focus,
-      input[type="email"]:focus,
-      input[type="datetime-local"]:focus {
-        border-color: #e00874;
-        outline: none;
-      }
-
-      input[type="radio"] {
-        margin-right: 6px;
-        margin-left: 10px;
-      }
-
-      button {
-        background-color: #66095e;
-        color: white;
-        padding: 10px 18px;
-        margin-top: 20px;
-        margin-right: 12px;
-        border: none;
-        border-radius: 6px;
-        cursor: pointer;
-        font-size: 15px;
-        transition: background-color 0.3s, transform 0.2s;
-      }
-
-      button:hover {
-        background-color: #7a0d90;
-        transform: scale(1.03);
-      }
-
-      .botones-centrados {
-        text-align: center;
-        margin-top: 30px;
-      }
-
-      table {
-        width: 100%;
-        border-collapse: collapse;
-        margin-top: 30px;
-        font-size: 14px;
-        background-color: #fff;
-        border: 1px solid #ccc;
-      }
-
-      th, td {
-        border: 1px solid #ccc;
-        padding: 12px;
-        text-align: center;
-      }
-
-      th {
-        background-color: #f0f0f0;
-        color: #333;
-        font-weight: 600;
-      }
-
-      .acciones button {
-        background: none;
-        border: none;
-        cursor: pointer;
-        font-size: 18px;
-        padding: 5px;
-        margin: 0 4px;
-        color: #555;
-      }
-
-      .acciones button:hover {
-        color: #87b6df;
-        transform: scale(1.2);
-      }
-
-      .row {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 20px;
-      margin-bottom: 20px;
-      }
-
-      .col {
-        flex: 1;
-        min-width: 200px;
-      }
-
-    </style>
-
+    .btn-purple:hover {
+      background-color: #7a0d90;
+    }
+  </style>
 </head>
 <body>
-    <div>
-      <h1>Registro de Pasajeros</h1>
-      <div class="row">
-        <div class="col">
-          <label for="nombre">Nombre:</label>
-          <input type="text" id="nombre" name="nombre" placeholder="Ingrese su nombre"/>
+  <div class="contenedor">
+    <h1 class="text-center mb-4">Registro de Pasajeros</h1>
+
+    <form>
+      <div class="row mb-3">
+        <div class="col-md-6">
+          <label for="nombre" class="form-label">Nombre:</label>
+          <input type="text" class="form-control" id="nombre" placeholder="Ingrese su nombre" />
         </div>
-        <div class="col">
-          <label for="apellido">Apellido:</label>
-          <input type="text" id="apellido" name="apellido" placeholder="Ingrese su apellido"/>
+        <div class="col-md-6">
+          <label for="apellido" class="form-label">Apellido:</label>
+          <input type="text" class="form-control" id="apellido" placeholder="Ingrese su apellido" />
         </div>
       </div>
 
-      <div class="row">
-        <div class="col">
-          <label for="nombre">Numero de Pasaporte:</label>
-          <input type="text" id="npasaporte" name="npasaporte" placeholder="Ingrese su número de pasaporte"/>
+      <div class="row mb-3">
+        <div class="col-md-6">
+          <label for="npasaporte" class="form-label">Número de Pasaporte:</label>
+          <input type="text" class="form-control" id="npasaporte" placeholder="Ingrese su número de pasaporte" />
         </div>
-        <div class="col">
-          <label for="fecha_nacimiento">Fecha de Nacimiento:</label>
-          <input type="datetime-local" id="fecha_nacimiento" name="fecha_nacimiento"/>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col">
-          <label for="genero">Genero:</label>
-          <label for="masculino">Masculino</label>
-          <input type="radio" id="masculino" name="genero" value="Masculino"/>
-          <label for="femenino">Femenino</label>
-          <input type="radio" id="femenino" name="genero" value="Femenino"/>
-        </div>
-        <div class="col">
-          <label for="correo">Correo Electronico:</label>
-          <input type="text" id="correo" name="correo"/>
+        <div class="col-md-6">
+          <label for="fecha_nacimiento" class="form-label">Fecha de Nacimiento:</label>
+          <input type="date" class="form-control" id="fecha_nacimiento" />
         </div>
       </div>
 
-      <div class="row">
-        <div class="col">
-          <label for="telefono">Numero Telefonico:</label>
-          <input type="text" id="telefono" name="telefono" placeholder="Ingrese su número de telefono"/>
+      <div class="row mb-3">
+        <div class="col-md-6">
+          <label class="form-label d-block">Género:</label>
+          <div class="form-check form-check-inline">
+            <input type="radio" id="masculino" name="genero" value="Masculino" class="form-check-input" />
+            <label for="masculino" class="form-check-label">Masculino</label>
+          </div>
+          <div class="form-check form-check-inline">
+            <input type="radio" id="femenino" name="genero" value="Femenino" class="form-check-input" />
+            <label for="femenino" class="form-check-label">Femenino</label>
+          </div>
         </div>
-        <div class="col">
-          <label for="cemergencia">Contacto de Emergencia:</label>
-          <input type="text" id="cemergencia" name="cemergencia" placeholder="Ingrese su contacto de emergencia"/>
+        <div class="col-md-6">
+          <label for="correo" class="form-label">Correo Electrónico:</label>
+          <input type="text" class="form-control" id="correo" />
         </div>
       </div>
 
-      <div class="botones-centrados">
-        <button onclick="agregarFila()">Agregar a la tabla</button>
+      <div class="row mb-4">
+        <div class="col-md-6">
+          <label for="telefono" class="form-label">Número Telefónico:</label>
+          <input type="text" class="form-control" id="telefono" placeholder="Ingrese su número de teléfono" />
+        </div>
+        <div class="col-md-6">
+          <label for="cemergencia" class="form-label">Contacto de Emergencia:</label>
+          <input type="text" class="form-control" id="cemergencia" placeholder="Ingrese su contacto de emergencia" />
+        </div>
       </div>
 
-      <table id="tDatos">
-          <thead>
-            <tr>
-              <th>Nombre</th>
-              <th>Apellido</th>
-              <th>Numero de Pasaporte</th>
-              <th>Fecha de Nacimiento</th>
-              <th>Genero</th>
-              <th>Correo Electronico</th>
-              <th>Numero Telefonico</th>
-              <th>Contacto de Emergencia</th>
-              <th>Acciones</th>
-            </tr>
-          </thead>
-          <tbody>
-            <!-- -->
-          </tbody>
-        </table>
-      
-      <div class="botones-centrados">
-        <button onclick="guardarDatos()">Guardar</button>
-        <button onclick="cancelarFormulario()">Cancelar</button>
+      <div class="text-center mb-4">
+        <button type="button" class="btn btn-purple" onclick="agregarFila()">Agregar a la tabla</button>
       </div>
+    </form>
+
+    <div class="table-responsive mb-4">
+      <table class="table table-bordered table-striped text-center" id="tDatos">
+        <thead class="table-light">
+          <tr>
+            <th>Nombre</th>
+            <th>Apellido</th>
+            <th>Pasaporte</th>
+            <th>Nacimiento</th>
+            <th>Género</th>
+            <th>Correo</th>
+            <th>Teléfono</th>
+            <th>Emergencia</th>
+            <th>Acciones</th>
+          </tr>
+        </thead>
+        <tbody></tbody>
+      </table>
     </div>
 
-    <script>
-      function agregarFila() {
-        const nombre = document.getElementById('nombre').value.trim();
-        const apellido = document.getElementById('apellido').value.trim();
-        const npasaporte = document.getElementById('npasaporte').value.trim();
-        const fecha_nacimiento = document.getElementById('fecha_nacimiento').value;
-        const genero = document.querySelector('input[name="genero"]:checked')?.value;
-        const correo = document.getElementById('correo').value;
-        const telefono = document.getElementById('telefono').value;
-        const cemergencia = document.getElementById('cemergencia').value;
+    <div class="text-center">
+      <button class="btn btn-success me-2" onclick="guardarDatos()">Guardar</button>
+      <button class="btn btn-danger" onclick="cancelarFormulario()">Cancelar</button>
+    </div>
+  </div>
 
-        if (!nombre || !apellido || !npasaporte || !fecha_nacimiento || !genero ||
-            !correo || !telefono || !cemergencia) {
-          alert("Por favor, complete todos los campos.");
-          return;
-        }
+  <script>
+    function agregarFila() {
+      const nombre = document.getElementById('nombre').value.trim();
+      const apellido = document.getElementById('apellido').value.trim();
+      const npasaporte = document.getElementById('npasaporte').value.trim();
+      const fecha_nacimiento = document.getElementById('fecha_nacimiento').value;
+      const genero = document.querySelector('input[name="genero"]:checked')?.value;
+      const correo = document.getElementById('correo').value;
+      const telefono = document.getElementById('telefono').value;
+      const cemergencia = document.getElementById('cemergencia').value;
 
-        const tabla = document.getElementById('tDatos').getElementsByTagName('tbody')[0];
-        const nuevaFila = tabla.insertRow();
-
-        nuevaFila.insertCell(0).textContent = nombre;
-        nuevaFila.insertCell(1).textContent = apellido;
-        nuevaFila.insertCell(2).textContent = npasaporte;
-        nuevaFila.insertCell(3).textContent = fecha_nacimiento;
-        nuevaFila.insertCell(4).textContent = genero;
-        nuevaFila.insertCell(5).textContent = correo;
-        nuevaFila.insertCell(6).textContent = telefono;
-        nuevaFila.insertCell(7).textContent = cemergencia;
-
-        const celdaAcciones = nuevaFila.insertCell(8);
-
-        // Botón VER DATOS
-        const btnVer = document.createElement('button');
-        btnVer.innerHTML = '<i class="fa-solid fa-eye"></i>';
-        btnVer.title = "Ver Datos";
-        btnVer.style.marginRight = "5px";
-        btnVer.onclick = function () {
-          alert(`Datos del pasajero:\n
-          Nombre: ${nombre}
-          Apellido: ${apellido}
-          Pasaporte: ${npasaporte}
-          Fecha de Nacimiento: ${fecha_nacimiento}
-          Género: ${genero}
-          Correo: ${correo}
-          Teléfono: ${telefono}
-          Contacto de Emergencia: ${cemergencia}`);
-        };
-        celdaAcciones.appendChild(btnVer);
-
-        // Botón EDITAR
-        const btnEditar = document.createElement('button');
-        btnEditar.innerHTML = '<i class="fa-solid fa-pen"></i>';
-        btnEditar.title = "Editar";
-        btnEditar.style.marginRight = "5px";
-        btnEditar.onclick = function () {
-          document.getElementById('nombre').value = nombre;
-          document.getElementById('apellido').value = apellido;
-          document.getElementById('npasaporte').value = npasaporte;
-          document.getElementById('fecha_nacimiento').value = fecha_nacimiento;
-          document.querySelector(`input[name="genero"][value="${genero}"]`).checked = true;
-          document.getElementById('correo').value = correo;
-          document.getElementById('telefono').value = telefono;
-          document.getElementById('cemergencia').value = cemergencia;
-
-          tabla.deleteRow(nuevaFila.rowIndex - 1);
-        };
-        celdaAcciones.appendChild(btnEditar);
-
-        // Botón ELIMINAR
-        const btnEliminar = document.createElement('button');
-        btnEliminar.innerHTML = '<i class="fa-solid fa-trash"></i>';
-        btnEliminar.title = "Eliminar";
-        btnEliminar.onclick = function () {
-          const confirmar = confirm("¿Estás seguro de que deseas eliminar este registro?");
-          if (confirmar) {
-            tabla.deleteRow(nuevaFila.rowIndex - 1);
-          }
-        };
-        celdaAcciones.appendChild(btnEliminar);
-
-        // Limpiar campos
-        document.getElementById("nombre").value = "";
-        document.getElementById("apellido").value = "";
-        document.getElementById("npasaporte").value = "";
-        document.getElementById("fecha_nacimiento").value = "";
-        document.getElementById("correo").value = "";
-        document.getElementById("telefono").value = "";
-        document.getElementById("cemergencia").value = "";
-        document.querySelectorAll('input[name="genero"]').forEach(r => r.checked = false);
-
+      if (!nombre || !apellido || !npasaporte || !fecha_nacimiento || !genero ||
+          !correo || !telefono || !cemergencia) {
+        alert("Por favor, complete todos los campos.");
+        return;
       }
 
-      function guardarDatos() {
-        const tabla = document.getElementById("tDatos").getElementsByTagName("tbody")[0];
-        const filas = tabla.getElementsByTagName("tr");
-        let datos = [];
+      const tabla = document.getElementById('tDatos').getElementsByTagName('tbody')[0];
+      const nuevaFila = tabla.insertRow();
+
+      nuevaFila.insertCell(0).textContent = nombre;
+      nuevaFila.insertCell(1).textContent = apellido;
+      nuevaFila.insertCell(2).textContent = npasaporte;
+      nuevaFila.insertCell(3).textContent = fecha_nacimiento;
+      nuevaFila.insertCell(4).textContent = genero;
+      nuevaFila.insertCell(5).textContent = correo;
+      nuevaFila.insertCell(6).textContent = telefono;
+      nuevaFila.insertCell(7).textContent = cemergencia;
+
+      const celdaAcciones = nuevaFila.insertCell(8);
+
+      const btnVer = document.createElement('button');
+      btnVer.innerHTML = '<i class="fa-solid fa-eye"></i>';
+      btnVer.title = "Ver Datos";
+      btnVer.classList.add("acciones");
+      btnVer.onclick = () => {
+        alert(`Datos del pasajero:\n
+        Nombre: ${nombre}
+        Apellido: ${apellido}
+        Pasaporte: ${npasaporte}
+        Nacimiento: ${fecha_nacimiento}
+        Género: ${genero}
+        Correo: ${correo}
+        Teléfono: ${telefono}
+        Emergencia: ${cemergencia}`);
+      };
+      celdaAcciones.appendChild(btnVer);
+
+      const btnEditar = document.createElement('button');
+      btnEditar.innerHTML = '<i class="fa-solid fa-pen"></i>';
+      btnEditar.title = "Editar";
+      btnEditar.classList.add("acciones");
+      btnEditar.onclick = () => {
+        document.getElementById('nombre').value = nombre;
+        document.getElementById('apellido').value = apellido;
+        document.getElementById('npasaporte').value = npasaporte;
+        document.getElementById('fecha_nacimiento').value = fecha_nacimiento;
+        document.querySelector(`input[name="genero"][value="${genero}"]`).checked = true;
+        document.getElementById('correo').value = correo;
+        document.getElementById('telefono').value = telefono;
+        document.getElementById('cemergencia').value = cemergencia;
+
+        tabla.deleteRow(nuevaFila.rowIndex - 1);
+      };
+      celdaAcciones.appendChild(btnEditar);
+
+      const btnEliminar = document.createElement('button');
+      btnEliminar.innerHTML = '<i class="fa-solid fa-trash"></i>';
+      btnEliminar.title = "Eliminar";
+      btnEliminar.classList.add("acciones");
+      btnEliminar.onclick = () => {
+        if (confirm("¿Deseas eliminar este registro?")) {
+          tabla.deleteRow(nuevaFila.rowIndex - 1);
+        }
+      };
+      celdaAcciones.appendChild(btnEliminar);
+
+      // Limpiar campos
+      document.querySelectorAll('input').forEach(i => i.value = '');
+      document.querySelectorAll('input[name="genero"]').forEach(r => r.checked = false);
+    }
+
+    function guardarDatos() {
+      const tabla = document.getElementById("tDatos").getElementsByTagName("tbody")[0];
+      const filas = tabla.getElementsByTagName("tr");
+      let datos = [];
 
       for (let fila of filas) {
         const celdas = fila.getElementsByTagName("td");
@@ -327,21 +238,14 @@
 
       localStorage.setItem("pasajeros", JSON.stringify(datos));
       alert("Datos guardados correctamente.");
-      }
+    }
 
-      function cancelarFormulario() {
-        if (confirm("¿Deseas limpiar los campos del formulario?")) {
-          document.getElementById("nombre").value = "";
-          document.getElementById("apellido").value = "";
-          document.getElementById("npasaporte").value = "";
-          document.getElementById("fecha_nacimiento").value = "";
-          document.getElementById("correo").value = "";
-          document.getElementById("telefono").value = "";
-          document.getElementById("cemergencia").value = "";
-          document.querySelectorAll('input[name="genero"]').forEach(r => r.checked = false);
-        }
+    function cancelarFormulario() {
+      if (confirm("¿Deseas limpiar los campos del formulario?")) {
+        document.querySelectorAll('input').forEach(i => i.value = '');
+        document.querySelectorAll('input[name="genero"]').forEach(r => r.checked = false);
       }
-</script>
-
+    }
+  </script>
 </body>
 </html>
