--- a/aerolineas.html
+++ b/aerolineas.html
@@ -4,236 +4,215 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gestión de Aerolíneas</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
+ 
         body {
-            font-family: 'Segoe UI', sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f0f4f8;
-            color: #333;
+            font-family: "Times New Roman", Times, serif;
         }
-
-        header, footer {
+     .compact-header {
             background-color: #a2d2ff;
-            text-align: center;
-            padding: 20px;
-            border-bottom: 4px solid #0077b6;
+            padding: 1rem;
+            border-bottom: 3px solid #0077b6;
         }
-
-        h1, h2 {
-            margin: 0;
-            padding: 10px 0;
-        }
-
-        main {
-            max-width: 1000px;
-            margin: 30px auto;
-            padding: 20px;
-            background-color: #ffffff;
-            border-radius: 16px;
-            box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
-        }
-
-        .form-section form {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: 15px;
-        }
-
-        .form-section input,
-        .form-section select,
-        .form-section textarea {
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 8px;
-            width: 100%;
-        }
-
-        .form-section textarea {
-            grid-column: span 2;
-            resize: none;
-        }
-
-        .form-section button {
-            padding: 10px 15px;
+        .compact-card {
+            border-radius: 10px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.05);
             border: none;
-            background-color: #48cae4;
-            color: white;
-            border-radius: 8px;
-            cursor: pointer;
-            transition: background-color 0.2s ease-in-out;
         }
-
-        .form-section button:hover {
-            background-color: #0096c7;
+        .form-label-inline {
+            display: flex;
+            align-items: center;
         }
-
-        .form-section button[type="reset"] {
-            background-color: #adb5bd;
+        .form-label-inline label {
+            font-size: 0.9rem;
+            color: #495057;
+            margin-right: 0.5rem;
+            width: 120px; /* Ajusta este valor según necesites */
+            flex-shrink: 0; /* Evita que la etiqueta se encoja */
+            text-align: right; /* Alinea el texto de la etiqueta a la derecha */
         }
-
-        .form-section button[type="reset"]:hover {
-            background-color: #6c757d;
+        .form-label-inline .form-control, .form-label-inline .form-select {
+            padding: 0.5rem 0.75rem;
+            font-size: 0.9rem;
+            flex-grow: 1;
         }
-
-        .table-section {
-            margin-top: 40px;
+        .btn-sm {
+            padding: 0.25rem 0.5rem;
+            font-size: 0.8rem;
         }
-
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-top: 15px;
-            background-color: #f9f9f9;
-            border-radius: 12px;
-            overflow: hidden;
+        .table-sm td, .table-sm th {
+            padding: 0.5rem;
         }
-
-        th, td {
-            padding: 12px 16px;
-            text-align: center;
-            border-bottom: 1px solid #ddd;
+        .action-buttons .btn {
+            margin: 0 2px;
+            min-width: 50px;
         }
-
-        th {
-            background-color: #bde0fe;
-        }
-
-        tr:hover {
-            background-color: #e0f7fa;
-        }
-
-        td button {
-            padding: 6px 10px;
-            margin: 2px;
-            border: none;
-            border-radius: 6px;
-            cursor: pointer;
-        }
-
-        td button:hover {
-            opacity: 0.8;
-        }
-
-        td button:nth-child(1) { background-color: #38b000; color: white; } /* Ver */
-        td button:nth-child(2) { background-color: #ffb703; color: white; } /* Editar */
-        td button:nth-child(3) { background-color: #d90429; color: white; } /* Eliminar */
-
-        footer {
-            margin-top: 40px;
-            border-top: 4px solid #0077b6;
+        .btn-view { background-color: #38b000; }
+        .btn-edit { background-color: #ffb703; }
+        .btn-delete { background-color: #d90429; }
+        .compact-footer {
+            background-color: #a2d2ff;
+            padding: 1rem;
+            border-top: 3px solid #0077b6;
+            font-size: 0.85rem;
         }
     </style>
 </head>
 <body>
-    <header>
-        <h1>Gestión de Aerolíneas</h1>
-        <p>Administra las compañías aéreas disponibles en el sistema</p>
+    <header class="compact-header text-center mb-3">
+        <h1 class="h4 mb-1 fw-bold">Gestión de Aerolíneas</h1>
+        <p class="mb-0 small">Administración de compañías aéreas</p>
     </header>
 
-    <main>
-        <section class="form-section">
-            <h2>Registrar Nueva Aerolínea</h2>
-            <form id="airlineForm">
-                <input type="text" id="nombre" placeholder="Nombre de la aerolínea" required>
-                <input type="text" id="codigo" placeholder="Código IATA" maxlength="3" required>
-                <input type="text" id="pais" placeholder="País de origen" required>
-                <input type="number" id="fundacion" placeholder="Año de fundación" min="1900" max="2025" required>
-                <select id="estado" required>
-                    <option value="">Estado operativo</option>
-                    <option value="Activo">Activo</option>
-                    <option value="Inactivo">Inactivo</option>
-                    <option value="En reorganización">En reorganización</option>
-                </select>
-                <textarea id="descripcion" placeholder="Descripción" rows="3" required></textarea>
-                <button type="submit">Guardar</button>
-                <button type="reset">Cancelar</button>
-            </form>
-        </section>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-lg-10">
+                <div class="card compact-card mb-4">
+                    <div class="card-body">
+                        <h2 class="h5 card-title mb-3">Nueva Aerolínea</h2>
+                        <form id="airlineForm" class="compact-form">
+                            <div class="row mb-3">
+                                <div class="col-md-6">
+                                    <div class="form-label-inline">
+                                        <label for="nombre">Nombre:</label>
+                                        <input type="text" class="form-control form-control-sm" id="nombre" placeholder="Nombre" required>
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="form-label-inline">
+                                        <label for="codigo">Código:</label>
+                                        <input type="text" class="form-control form-control-sm" id="codigo" placeholder="Código IATA" maxlength="3" required>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row mb-3">
+                                <div class="col-md-6">
+                                    <div class="form-label-inline">
+                                        <label for="pais">País:</label>
+                                        <input type="text" class="form-control form-control-sm" id="pais" placeholder="País" required>
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="form-label-inline">
+                                        <label for="fundacion">Año:</label>
+                                        <input type="number" class="form-control form-control-sm" id="fundacion" placeholder="Año fundación" min="1900" max="2025" required>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row mb-3">
+                                <div class="col-md-6">
+                                    <div class="form-label-inline">
+                                        <label for="estado">Estado:</label>
+                                        <select class="form-select form-select-sm" id="estado" required>
+                                            <option value="">Estado operativo</option>
+                                            <option value="Activo">Activo</option>
+                                            <option value="Inactivo">Inactivo</option>
+                                            <option value="En reorganización">En reorganización</option>
+                                        </select>
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="form-label-inline">
+                                        <label for="descripcion">Descripción:</label>
+                                        <textarea class="form-control form-control-sm" id="descripcion" placeholder="Descripción breve" rows="1" required></textarea>
+                                    </div>
+                                </div>
+                            </div>
+                            <button type="submit" class="btn btn-primary btn-sm">Guardar</button>
+                            <button type="button" class="btn btn-secondary btn-sm">Cancelar</button>
+                        </form>
+                    </div>
+                </div>
 
-        <section class="table-section">
-            <h2>Aerolíneas Registradas</h2>
-            <table id="airlinesTable">
-                <thead>
-                    <tr>
-                        <th>Nombre</th>
-                        <th>Código IATA</th>
-                        <th>País</th>
-                        <th>Año</th>
-                        <th>Estado</th>
-                        <th>Acciones</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <!-- Se agregan dinámicamente -->
-                </tbody>
-            </table>
-        </section>
-    </main>
+                <div class="card compact-card">
+                    <div class="card-body">
+                        <h2 class="h5 card-title mb-3">Aerolíneas Registradas</h2>
+                        <div class="table-responsive">
+                            <table class="table table-sm table-hover mb-0">
+                                <thead class="table-light">
+                                    <tr>
+                                        <th>Nombre</th>
+                                        <th>Código</th>
+                                        <th>País</th>
+                                        <th>Año</th>
+                                        <th>Estado</th>
+                                        <th class="text-end">Acciones</th>
+                                    </tr>
+                                </thead>
+                                <tbody id="airlinesTable">
+                                    </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
-    <footer>
-        <p>Sistema de Ventas de Boletos Aéreos &copy; 2023 - Sistema Aéreo</p>
-        <p>Versión 1.0.0</p>
+    <footer class="compact-footer text-center mt-4">
+        <p class="mb-0 small">Sistema de Ventas de Boletos Aéreos &copy; 2023 - Versión 1.0.0</p>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
     <script>
         document.addEventListener("DOMContentLoaded", () => {
             const form = document.getElementById("airlineForm");
-            const tableBody = document.querySelector("#airlinesTable tbody");
+            const tableBody = document.querySelector("#airlinesTable");
 
-      form.addEventListener("submit", function (e) {
-        e.preventDefault();
+            form.addEventListener("submit", function (e) {
+                e.preventDefault();
 
-        const nombre = document.getElementById("nombre").value;
-        const codigo = document.getElementById("codigo").value.toUpperCase();
-        const pais = document.getElementById("pais").value;
-        const fundacion = document.getElementById("fundacion").value;
-        const estado = document.getElementById("estado").value;
-        const descripcion = document.getElementById("descripcion").value;
+                const nombre = document.getElementById("nombre").value;
+                const codigo = document.getElementById("codigo").value.toUpperCase();
+                const pais = document.getElementById("pais").value;
+                const fundacion = document.getElementById("fundacion").value;
+                const estado = document.getElementById("estado").value;
+                const descripcion = document.getElementById("descripcion").value;
 
                 const row = document.createElement("tr");
                 row.innerHTML = `
-                    <td>${nombre}</td>
-                    <td>${codigo}</td>
-                    <td>${pais}</td>
-                    <td>${fundacion}</td>
-                    <td>${estado}</td>
-                    <td>
-                        <button onclick="verDescripcion('${descripcion.replace(/'/g, "\\'")}')">Ver</button>
-                        <button onclick="editarFila(this)">Editar</button>
-                        <button onclick="eliminarFila(this)">Eliminar</button>
+                    <td class="align-middle">${nombre}</td>
+                    <td class="align-middle">${codigo}</td>
+                    <td class="align-middle">${pais}</td>
+                    <td class="align-middle">${fundacion}</td>
+                    <td class="align-middle"><span class="badge ${estado === 'Activo' ? 'bg-success' : estado === 'Inactivo' ? 'bg-danger' : 'bg-warning'}">${estado}</span></td>
+                    <td class="text-end action-buttons">
+                        <button class="btn btn-view btn-sm text-white" onclick="verDescripcion('${descripcion.replace(/'/g, "\\'")}')">Ver</button>
+                        <button class="btn btn-edit btn-sm text-white" onclick="editarFila(this)">Editar</button>
+                        <button class="btn btn-delete btn-sm text-white" onclick="eliminarFila(this)">Eliminar</button>
                     </td>
                 `;
 
-        tableBody.appendChild(row);
-        form.reset();
-        alert("¡Aerolínea registrada exitosamente!");
-      });
-    });
+                tableBody.appendChild(row);
+                form.reset();
+            });
+        });
 
-    function verDescripcion(desc) {
-      alert("Descripción:\n" + desc);
-    }
+        function verDescripcion(desc) {
+            alert("Descripción:\n" + desc);
+        }
 
-    function eliminarFila(button) {
-      if (confirm("¿Estás seguro de eliminar esta aerolínea?")) {
-        const row = button.closest("tr");
-        row.remove();
-      }
-    }
+        function eliminarFila(button) {
+            if (confirm("¿Estás seguro de eliminar esta aerolínea?")) {
+                const row = button.closest("tr");
+                row.remove();
+            }
+        }
 
-    function editarFila(button) {
-      const row = button.closest("tr");
-      const cells = row.querySelectorAll("td");
+        function editarFila(button) {
+            const row = button.closest("tr");
+            const cells = row.querySelectorAll("td");
 
             document.getElementById("nombre").value = cells[0].textContent;
             document.getElementById("codigo").value = cells[1].textContent;
             document.getElementById("pais").value = cells[2].textContent;
             document.getElementById("fundacion").value = cells[3].textContent;
-            document.getElementById("estado").value = cells[4].textContent;
+            document.getElementById("estado").value = cells[4].querySelector("span").textContent;
 
-      row.remove();
-    }
-  </script>
+            row.remove();
+        }
+    </script>
 </body>
 </html>
