agregacion del menu en pasajeros

--- a/vuelos.html
+++ b/vuelos.html
@@ -56,21 +56,21 @@
             <form id="vueloForm">
                 <div class="row g-3">
                     <div class="col-md-4">
-                        <label class="form-label">Número de vuelo</label>
+                        <label class="form-label">Número de vuelo:</label>
                         <input type="number" class="form-control" placeholder="Ej: 1234" id="numero">
                     </div>
                     <div class="col-md-4">
-                        <label class="form-label">Origen</label>
+                        <label class="form-label">Origen:</label>
                         <input type="text" class="form-control" placeholder="Ej: Lima" id="origen">
                     </div>
                     <div class="col-md-4">
-                        <label class="form-label">Destino</label>
+                        <label class="form-label">Destino:</label>
                         <input type="text" class="form-control" placeholder="Ej: Bogotá" id="destino">
                     </div>
 
                     <!-- Aerolínea -->
                     <div class="col-md-6">
-                        <label class="form-label">Aerolínea</label>
+                        <label class="form-label">Aerolínea:</label>
                         <select class="form-select" id="aerolinea">
                             <option selected disabled>Seleccione una aerolínea</option>
                             <option>LATAM</option>
@@ -83,7 +83,7 @@
 
                     <!-- Estado del Vuelo -->
                     <div class="col-md-6">
-                        <label class="form-label">Estado del Vuelo</label>
+                        <label class="form-label">Estado del Vuelo:</label>
                         <select class="form-select" id="estado">
                             <option selected disabled>Seleccione el estado</option>
                             <option>Programado</option>
@@ -95,25 +95,25 @@
                     </div>
 
                     <div class="col-md-6">
-                        <label class="form-label">Fecha de Partida</label>
+                        <label class="form-label">Fecha de Partida:</label>
                         <input type="date" class="form-control" id="fechaPartida">
                     </div>
                     <div class="col-md-6">
-                        <label class="form-label">Hora de Partida</label>
+                        <label class="form-label">Hora de Partida:</label>
                         <input type="time" class="form-control" id="horaPartida">
                     </div>
 
                     <div class="col-md-6">
-                        <label class="form-label">Fecha de Llegada</label>
+                        <label class="form-label">Fecha de Llegada:</label>
                         <input type="date" class="form-control" id="fechaLlegada">
                     </div>
                     <div class="col-md-6">
-                        <label class="form-label">Hora de Llegada</label>
+                        <label class="form-label">Hora de Llegada:</label>
                         <input type="time" class="form-control" id="horaLlegada">
                     </div>
                 </div>
 
-                <div class="mt-4 text-end">
+                <div class="mt-4 text-center">
                     <button type="submit" class="btn btn-primary" id="btnGuardar">Guardar Vuelo</button>
                 </div>
             </form>
