--- a/pasajeros.html
+++ b/pasajeros.html
@@ -3,137 +3,148 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Registro de Pasajeros</title>
+  <title>Registro de Pasajeros | SistemaAéreo</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <link rel="stylesheet" href="CSS/estilos.css">
+  </head>
 
-  <style>
-    body {
-      background-color: #cfa9d6;
-      padding: 20px;
-    }
 
-    .contenedor {
-      background-color: #ffffff;
-      padding: 30px 40px;
-      border-radius: 12px;
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
-      max-width: 960px;
-      margin: auto;
-    }
+<body class="has-navbar">
+  <nav class="navbar">
+        <a href="index.html" class="navbar-brand">
+            <i class="fas fa-plane"></i>
+            SistemaAéreo
+        </a>
+        <ul class="nav-menu">
+            <li class="nav-item">
+                <a href="index.html" class="nav-link">
+                    <i class="fas fa-home"></i>
+                    Inicio
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="vuelos.html" class="nav-link active">
+                    <i class="fas fa-plane"></i>
+                    Vuelos
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="pasajeros.html" class="nav-link">
+                    <i class="fas fa-users"></i>
+                    Pasajeros
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="aerolineas.html" class="nav-link">
+                    <i class="fas fa-headset"></i>
+                    Aerolíneas
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="venta_boletos.html" class="nav-link">
+                    <i class="fas fa-ticket-alt"></i>
+                    Boletos
+                </a>
+            </li>
+        </ul>
+  </nav>
 
-    .acciones button {
-      background: none;
-      border: none;
-      cursor: pointer;
-      font-size: 18px;
-      padding: 5px;
-      margin: 0 4px;
-      color: #50d144;
-    }
 
-    .acciones button:hover {
-      color: #87b6df;
-      transform: scale(1.2);
-    }
+ <main>
+    <div class="container my-4 p-4 bg-white rounded shadow" style="max-width: 800px;">
+      <h3 class="mb-4">Registro de Pasajeros</h3>
 
-    .btn-purple {
-      background-color: #66095e;
-      color: white;
-    }
-
-    .btn-purple:hover {
-      background-color: #7a0d90;
-    }
-  </style>
-</head>
-<body>
-  <div class="contenedor">
-    <h1 class="text-center mb-4">Registro de Pasajeros</h1>
-
-    <form>
-      <div class="row mb-3">
-        <div class="col-md-6">
-          <label for="nombre" class="form-label">Nombre:</label>
-          <input type="text" class="form-control" id="nombre" placeholder="Ingrese su nombre" />
-        </div>
-        <div class="col-md-6">
-          <label for="apellido" class="form-label">Apellido:</label>
-          <input type="text" class="form-control" id="apellido" placeholder="Ingrese su apellido" />
-        </div>
-      </div>
-
-      <div class="row mb-3">
-        <div class="col-md-6">
-          <label for="npasaporte" class="form-label">Número de Pasaporte:</label>
-          <input type="text" class="form-control" id="npasaporte" placeholder="Ingrese su número de pasaporte" />
-        </div>
-        <div class="col-md-6">
-          <label for="fecha_nacimiento" class="form-label">Fecha de Nacimiento:</label>
-          <input type="date" class="form-control" id="fecha_nacimiento" />
-        </div>
-      </div>
-
-      <div class="row mb-3">
-        <div class="col-md-6">
-          <label class="form-label d-block">Género:</label>
-          <div class="form-check form-check-inline">
-            <input type="radio" id="masculino" name="genero" value="Masculino" class="form-check-input" />
-            <label for="masculino" class="form-check-label">Masculino</label>
+      <form>
+      <div class="row g-3">
+          <div class="col-md-6">
+            <label class="form-label">Nombre:</label>
+            <input type="text" class="form-control" id="nombre" placeholder="Ingrese su nombre">
           </div>
-          <div class="form-check form-check-inline">
-            <input type="radio" id="femenino" name="genero" value="Femenino" class="form-check-input" />
-            <label for="femenino" class="form-check-label">Femenino</label>
+          <div class="col-md-6">
+            <label class="form-label">Apellido:</label>
+            <input type="text" class="form-control" id="apellido" placeholder="Ingrese su apellido">
           </div>
-        </div>
-        <div class="col-md-6">
-          <label for="correo" class="form-label">Correo Electrónico:</label>
-          <input type="text" class="form-control" id="correo" />
-        </div>
-      </div>
 
-      <div class="row mb-4">
-        <div class="col-md-6">
-          <label for="telefono" class="form-label">Número Telefónico:</label>
-          <input type="text" class="form-control" id="telefono" placeholder="Ingrese su número de teléfono" />
-        </div>
-        <div class="col-md-6">
-          <label for="cemergencia" class="form-label">Contacto de Emergencia:</label>
-          <input type="text" class="form-control" id="cemergencia" placeholder="Ingrese su contacto de emergencia" />
-        </div>
-      </div>
+          <div class="col-md-6">
+            <label class="form-label">Número de Pasaporte:</label>
+            <input type="text" class="form-control" id="npasaporte" placeholder="Ingrese su número de pasaporte">
+          </div>
 
-      <div class="text-center mb-4">
-        <button type="button" class="btn btn-purple" onclick="agregarFila()">Agregar a la tabla</button>
-      </div>
-    </form>
+          <div class="col-md-6">
+            <label class="form-label">Fecha de Nacimiento:</label>
+            <input type="date" class="form-control" id="fecha_nacimiento">
+          </div>
+      
+          <div class="col-md-6">
 
-    <div class="table-responsive mb-4">
-      <table class="table table-bordered table-striped text-center" id="tDatos">
-        <thead class="table-light">
-          <tr>
-            <th>Nombre</th>
-            <th>Apellido</th>
-            <th>Pasaporte</th>
-            <th>Nacimiento</th>
-            <th>Género</th>
-            <th>Correo</th>
-            <th>Teléfono</th>
-            <th>Emergencia</th>
-            <th>Acciones</th>
-          </tr>
-        </thead>
-        <tbody></tbody>
-      </table>
+            <label class="form-label d-block">Género:</label>
+
+            <div class="form-check form-check-inline">
+              <input type="radio" id="masculino" name="genero" value="Masculino" class="form-check-input">
+              <label for="masculino" class="form-check-label">Masculino</label>
+            </div>
+
+            <div class="form-check form-check-inline">
+              <input type="radio" id="femenino" name="genero" value="Femenino" class="form-check-input" />
+              <label for="femenino" class="form-check-label">Femenino</label>
+            </div>
+
+          </div>
+        
+          <div class="col-md-6">
+            <label class="form-label">Correo Electrónico:</label>
+            <input type="text" class="form-control" id="correo">
+          </div>
+
+
+          <div class="col-md-6">
+            <label class="form-label">Número Telefónico:</label>
+            <input type="text" class="form-control" id="telefono" placeholder="Ingrese su número de teléfono">
+          </div>
+
+          <div class="col-md-6">
+            <label class="form-label">Contacto de Emergencia:</label>
+            <input type="text" class="form-control" id="cemergencia" placeholder="Ingrese su contacto de emergencia">
+          </div>
+
+        </div>
+
+        <div class="mt-4 text-center">
+          <button type="button" class="btn btn-primary" onclick="agregarFila()">Guardar</button>
+          <button class="btn btn-danger" onclick="cancelarFormulario()">Cancelar</button>
+        </div>
+      </form>
     </div>
 
-    <div class="text-center">
-      <button class="btn btn-success me-2" onclick="guardarDatos()">Guardar</button>
-      <button class="btn btn-danger" onclick="cancelarFormulario()">Cancelar</button>
-    </div>
-  </div>
+      <div class="table-container">
+        <h2>Pasajeros Registrados</h2>
+        <table id="tDatos">
+          <thead>
+            <tr>
+              <th>Nombre</th>
+              <th>Apellido</th>
+              <th>Pasaporte</th>
+              <th>Nacimiento</th>
+              <th>Género</th>
+              <th>Correo</th>
+              <th>Teléfono</th>
+              <th>Emergencia</th>
+              <th>Acciones</th>
+            </tr>
+          </thead>
+          <tbody></tbody>
+        </table>
+      </div>
+  </main>
+
+
+  <footer>
+    <p>Sistema de Gestión de Vuelos &copy; 2023 - SistemaAéreo</p>
+          <p>Versión 1.0.0</p>
+  </footer>
 
   <script>
     function agregarFila() {
