--- a/venta_boletos.html
+++ b/venta_boletos.html
@@ -101,9 +101,9 @@
 
                     <div class="col-md-6">
                         <label class="form-label">Estado del boleto:</label>
-                        <option value="" selected disabled>Seleccione un estado</option>
                         <select class="form-select" id="estado" required>
-                            <option value="Reservado" selected>Reservado</option>
+                            <option value="" selected disabled>Seleccione un estado</option>
+                            <option value="Reservado">Reservado</option>
                             <option value="Confirmado">Confirmado</option>
                             <option value="Cancelado">Cancelado</option>
                         </select>
@@ -284,8 +284,9 @@
 
                 const celdaAcciones = fila.insertCell();
                 celdaAcciones.innerHTML = `
-                    <button class="btn btn-sm btn-warning me-1" onclick="editarBoleto(${tabla.rows.length - 1})">Editar</button>
-                    <button class="btn btn-sm btn-danger" onclick="eliminarBoleto(${tabla.rows.length - 1})">Eliminar</button>
+                    <i class="fas fa-eye icono-accion text-primary mx-1" title="Ver" onclick="verBoleto(this)"></i>
+                    <i class="fas fa-edit icono-accion text-warning mx-1" title="Editar" onclick="editarBoleto(${tabla.rows.length - 1})"></i>
+                    <i class="fas fa-trash-alt icono-accion text-danger mx-1" title="Eliminar" onclick="eliminarBoleto(${tabla.rows.length - 1})"></i>
                 `;
             }
 
@@ -296,6 +297,26 @@
                     default: return 'bg-primary';
                 }
             }
+
+            window.verBoleto = function(icono) {
+                const fila = icono.closest('tr');
+                const celdas = fila.cells;
+                
+                const mensaje = `
+                    Detalles del Boleto:
+                    ID: ${celdas[0].textContent}
+                    Pasajero: ${celdas[1].textContent}
+                    Vuelo: ${celdas[2].textContent}
+                    Fecha Reserva: ${celdas[3].textContent}
+                    Asiento: ${celdas[4].textContent}
+                    Clase: ${celdas[5].textContent}
+                    Precio: ${celdas[6].textContent}
+                    Estado: ${celdas[7].textContent}
+                    Servicios: ${celdas[8].textContent}
+                `;
+                
+                alert(mensaje);
+            };
 
             window.editarBoleto = function(index) {
                 const boleto = boletos[index];
